Adding changes for extension to build and install
Signed-off-by: David Tippett <dtip@amazon.com>

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,8 @@
 tasks:
+  - name: Build and Load the Extension
+    init: chmod 0755 ./extension/build.sh && cd extension && ./build.sh
+    command: gp await-port 23000 && code --install-extension ../opensearch-vscode-extension-1.0.0.vsix
+
   - name: Pre-Commit Hooks Setup
     init: |
       pip install pre-commit &&
