fixed relative path
Signed-off-by: Kyle J. Davis <kyledvs@amazon.com>

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -10,7 +10,7 @@ tasks:
 
   - name: Compose Setup
     init: cd demo && docker-compose --env-file env pull
-    command: cd demo && docker-compose --env-file env up
+    command: docker-compose --env-file env up
   
   - name: Readyness Check
     init: ./demo/check-dashboards.sh
