Seeing if this commit works for mypy
Signed-off-by: Mekaeel <mekaeel@berkeley.edu>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,12 @@ repos:
     rev: v2.1.0
     hooks:
         -   id: docker-compose-check
+
+    #MyPy
+-   repo: local
+    hooks:
+    -   id: mypy
+        name: mypy
+        entry: docbot
+        language: python  
+        types: [python]
