--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,4 @@
 [tool.black]
 line-length = 88
 target-version = ["py38", "py39", "py310", "py311"]
-v = true
+v = true    # emit messages to stderr about files that were not changed or were ignored due to exclusion patterns.
