--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,9 +35,54 @@ repos:
 
 -   repo: local
     hooks:
-    -   id: run-all-tests
-        name: run all tests
-        entry: python ./demo/test/run_all_tests.py
+    -   id: run_cluster_bootstrap_test
+        name: run cluster bootstrap test
+        entry: python ./demo/test/test_cluster_bootstrap.py
+        language: python
+        always_run: true
+        verbose: true
+
+-   repo: local
+    hooks:
+    -   id: run_ingestion_test
+        name: run ingestion test
+        entry: python ./demo/test/test_ingestion.py
+        language: python
+        always_run: true
+        verbose: true
+
+-   repo: local
+    hooks:
+    -   id: run_integration_test
+        name: run integration test
+        entry: python ./demo/test/test_integration.py
+        language: python
+        always_run: true
+        verbose: true
+
+-   repo: local
+    hooks:
+    -   id: run_query_test
+        name: run query test
+        entry: python ./demo/test/test_query_pipeline.py
+        language: python
+        always_run: true
+        verbose: true
+
+-   repo: local
+    hooks:
+    -   id: run_util_test
+        name: run util test
+        entry: python ./demo/test/test_util.py
+        language: python
+        always_run: true
+        verbose: true
+
+-   repo: local
+    hooks:
+    -   id: run_ingestion_test
+        name: run ingestion test
+        entry: python ./demo/test/test_ingestion.py
         language: python
         always_run: true
         verbose: true
