--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 
 # yapf can be installed using 'pip install yapf'
 [tool.yapf]
+column_limit = 100
 based_on_style = "pep8"
 indent_width = 2
 continuation_indent_width = 2
